@@ -33,6 +33,7 @@ m = merged into 3_8_BRANCH
 252955    [390] Impossible to compile with ccache
 274695    [390] s390x: Support "compare to/from logical" instructions (z196)
 275800    [390] s390x: Add support for the ecag instruction (part 1)
+275800    [390] s390x: Autodetect cache info (part 2)
 305948    [390] ppc64: code generation for ShlD64 / ShrD64 asserts
 306054    [390] s390x: Condition code computation for convert-to-int/logical
 307155    [390] filter_gdb should filter out syscall-template.S T_PSEUDO
